tests/sksl/errors/Ossfuzz31410.glsl
### Compilation failed:

error: 2: type mismatch: '*' cannot operate on 'float', 'int'
    sk_FragColor+=(0), 1.*~2;
                       ^^^^^
1 error
